{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 161,
  "lineage": "d321aaba-dcad-119e-e33a-7c61276c884a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "devops_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-047f63b6ffbc113d3",
            "domain": "vpc",
            "id": "eipalloc-047f63b6ffbc113d3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-209-197-24.compute-1.amazonaws.com",
            "public_ip": "18.209.197.24",
            "public_ipv4_pool": "amazon",
            "tags": {
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "mail": "orpimel@gmail.com"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows_server_ins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-069c45f40acdfe41e",
            "arn": "arn:aws:ec2:us-east-1:318539273132:instance/i-0e7fbb26599fef224",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e7fbb26599fef224",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02ad7d58c6ec231cd",
            "private_dns": "ip-10-0-101-17.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.17",
            "public_dns": "ec2-54-209-108-147.compute-1.amazonaws.com",
            "public_ip": "54.209.108.147",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0eef477841ddacedc",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09424b4a4f20187e5",
            "tags": {
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "mail": "orpimel@gmail.com"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cae6f441cac25dbb"
            ]
          },
          "dependencies": [
            "aws_security_group.server_windows_rdp_sg",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server_windows_rdp_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318539273132:security-group/sg-0cae6f441cac25dbb",
            "description": "RPD access to windows server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cae6f441cac25dbb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "server_windows_rdp_sg",
            "name_prefix": "",
            "owner_id": "318539273132",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f456890bbb07724b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318539273132:network-acl/acl-0f0174a8b093c6523",
            "default_network_acl_id": "acl-0f0174a8b093c6523",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0f0174a8b093c6523",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "318539273132",
            "subnet_ids": [
              "subnet-036d798f09dd9808e",
              "subnet-04ac17dc1427e4f3b",
              "subnet-07a374cac72f83934",
              "subnet-09424b4a4f20187e5",
              "subnet-0ab5428f9859f1cd9",
              "subnet-0e2e1dd9c23a039bd"
            ],
            "tags": {
              "Name": "devops_vpc-default",
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "Name": "devops_vpc-default",
              "mail": "orpimel@gmail.com"
            },
            "vpc_id": "vpc-0f456890bbb07724b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318539273132:route-table/rtb-00fc4edf7bc3ba8f9",
            "default_route_table_id": "rtb-00fc4edf7bc3ba8f9",
            "id": "rtb-00fc4edf7bc3ba8f9",
            "owner_id": "318539273132",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "devops_vpc-default",
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "Name": "devops_vpc-default",
              "mail": "orpimel@gmail.com"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0f456890bbb07724b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318539273132:security-group/sg-0441e5627062e8ac4",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0441e5627062e8ac4",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "318539273132",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops_vpc-default",
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "Name": "devops_vpc-default",
              "mail": "orpimel@gmail.com"
            },
            "vpc_id": "vpc-0f456890bbb07724b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318539273132:internet-gateway/igw-01322ff417f27662f",
            "id": "igw-01322ff417f27662f",
            "owner_id": "318539273132",
            "tags": {
              "Name": "devops_vpc",
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "Name": "devops_vpc",
              "mail": "orpimel@gmail.com"
            },
            "vpc_id": "vpc-0f456890bbb07724b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01322ff417f27662f",
            "id": "r-rtb-03f8afc442b3954fb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03f8afc442b3954fb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318539273132:route-table/rtb-0d26796d4c19a51c4",
            "id": "rtb-0d26796d4c19a51c4",
            "owner_id": "318539273132",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "devops_vpc-private-us-east-1a",
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "Name": "devops_vpc-private-us-east-1a",
              "mail": "orpimel@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f456890bbb07724b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318539273132:route-table/rtb-0347da7c0fb5563b3",
            "id": "rtb-0347da7c0fb5563b3",
            "owner_id": "318539273132",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "devops_vpc-private-us-east-1b",
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "Name": "devops_vpc-private-us-east-1b",
              "mail": "orpimel@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f456890bbb07724b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318539273132:route-table/rtb-057b3ab2aebf1a706",
            "id": "rtb-057b3ab2aebf1a706",
            "owner_id": "318539273132",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "devops_vpc-private-us-east-1c",
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "Name": "devops_vpc-private-us-east-1c",
              "mail": "orpimel@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f456890bbb07724b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318539273132:route-table/rtb-03f8afc442b3954fb",
            "id": "rtb-03f8afc442b3954fb",
            "owner_id": "318539273132",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01322ff417f27662f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops_vpc-public",
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "Name": "devops_vpc-public",
              "mail": "orpimel@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f456890bbb07724b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03705a24365cef685",
            "route_table_id": "rtb-0d26796d4c19a51c4",
            "subnet_id": "subnet-0ab5428f9859f1cd9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0542d58bc46787fab",
            "route_table_id": "rtb-0347da7c0fb5563b3",
            "subnet_id": "subnet-07a374cac72f83934"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3223d47269e1070",
            "route_table_id": "rtb-057b3ab2aebf1a706",
            "subnet_id": "subnet-036d798f09dd9808e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060bf6a4c1fe951da",
            "route_table_id": "rtb-03f8afc442b3954fb",
            "subnet_id": "subnet-09424b4a4f20187e5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9d36ac085d66704",
            "route_table_id": "rtb-03f8afc442b3954fb",
            "subnet_id": "subnet-0e2e1dd9c23a039bd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070e26ef13ccf722b",
            "route_table_id": "rtb-03f8afc442b3954fb",
            "subnet_id": "subnet-04ac17dc1427e4f3b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318539273132:subnet/subnet-0ab5428f9859f1cd9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab5428f9859f1cd9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318539273132",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops_vpc-private-us-east-1a",
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "Name": "devops_vpc-private-us-east-1a",
              "mail": "orpimel@gmail.com"
            },
            "vpc_id": "vpc-0f456890bbb07724b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318539273132:subnet/subnet-07a374cac72f83934",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a374cac72f83934",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318539273132",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops_vpc-private-us-east-1b",
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "Name": "devops_vpc-private-us-east-1b",
              "mail": "orpimel@gmail.com"
            },
            "vpc_id": "vpc-0f456890bbb07724b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318539273132:subnet/subnet-036d798f09dd9808e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036d798f09dd9808e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318539273132",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops_vpc-private-us-east-1c",
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "Name": "devops_vpc-private-us-east-1c",
              "mail": "orpimel@gmail.com"
            },
            "vpc_id": "vpc-0f456890bbb07724b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318539273132:subnet/subnet-09424b4a4f20187e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09424b4a4f20187e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318539273132",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops_vpc-public-us-east-1a",
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "Name": "devops_vpc-public-us-east-1a",
              "mail": "orpimel@gmail.com"
            },
            "vpc_id": "vpc-0f456890bbb07724b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318539273132:subnet/subnet-0e2e1dd9c23a039bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2e1dd9c23a039bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318539273132",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops_vpc-public-us-east-1b",
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "Name": "devops_vpc-public-us-east-1b",
              "mail": "orpimel@gmail.com"
            },
            "vpc_id": "vpc-0f456890bbb07724b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318539273132:subnet/subnet-04ac17dc1427e4f3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ac17dc1427e4f3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318539273132",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops_vpc-public-us-east-1c",
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "Name": "devops_vpc-public-us-east-1c",
              "mail": "orpimel@gmail.com"
            },
            "vpc_id": "vpc-0f456890bbb07724b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318539273132:vpc/vpc-0f456890bbb07724b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f0174a8b093c6523",
            "default_route_table_id": "rtb-00fc4edf7bc3ba8f9",
            "default_security_group_id": "sg-0441e5627062e8ac4",
            "dhcp_options_id": "dopt-012475ca27fc672c4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f456890bbb07724b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00fc4edf7bc3ba8f9",
            "owner_id": "318539273132",
            "tags": {
              "Name": "devops_vpc",
              "mail": "orpimel@gmail.com"
            },
            "tags_all": {
              "Name": "devops_vpc",
              "mail": "orpimel@gmail.com"
            }
          }
        }
      ]
    }
  ]
}